[gd_scene load_steps=6 format=2]

[ext_resource path="res://player/player/weapons/frisbee/frisbee.gd" type="Script" id=1]

[sub_resource type="SphereShape" id=3]
radius = 0.3

[sub_resource type="CylinderShape" id=5]
height = 0.1
radius = 0.5

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 1, 0, 1, 1 )

[sub_resource type="SphereShape" id=4]
radius = 0.6

[node name="Frisbee" type="RigidBody"]
collision_layer = 4
collision_mask = 21
mass = 0.5
continuous_cd = true
contacts_reported = 3
contact_monitor = true
can_sleep = false
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource( 1 )

[node name="Collider" type="CollisionShape" parent="."]
shape = SubResource( 3 )

[node name="InactiveCollider" type="CollisionShape" parent="."]
shape = SubResource( 5 )
disabled = true

[node name="CSGCylinder" type="CSGCylinder" parent="."]
radius = 0.5
height = 0.1
sides = 16
material = SubResource( 2 )

[node name="Damage" type="Area" parent="."]
collision_layer = 4
collision_mask = 8

[node name="Collider" type="CollisionShape" parent="Damage"]
visible = false
shape = SubResource( 4 )

[node name="SelfDestruct" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="SelfDestruct" to="." method="_on_self_destruct_timeout"]
